cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 11)
project(leetcode)

add_executable(249-grouped-shift-string 249-grouped-shift-string.cpp)
add_executable(124-Binary-Tree-Maximum-Path.cpp 124-Binary-Tree-Maximum-Path.cpp)
add_executable(451-Sort-Characters-By-Frequency 451-Sort-Characters-By-Frequency.cpp)
add_executable(1570-Dot-Product-of-Two-Sparse-Vectors 1570-Dot-Product-of-Two-Sparse-Vectors.cpp)
add_executable(314-Binary-Tree-Vertical-Order-Traversal 314-Binary-Tree-Vertical-Order-Traversal.cpp)
add_executable(398-Random-Pick-Index 398-Random-Pick-Index.cpp)
add_executable(199-Binary-Tree-Right-Side-View 199-Binary-Tree-Right-Side-View.cpp)
add_executable(560-Subarray-Sum-Equals-K 560-Subarray-Sum-Equals-K.cpp)
add_executable(1249-Minimum-Remove-to-Make-Valid-Parentheses 1249-Minimum-Remove-to-Make-Valid-Parentheses.cpp)
add_executable(1428-leftmost-column-with-at-least-a-one 1428-leftmost-column-with-at-least-a-one.cpp)
add_executable(39-Combination-Sum.cpp 39-Combination-Sum.cpp)